# CPP-LABS

./: README.md
cpp-prog-minesweeper/: Makefile  Makefile.Debug  Makefile.Release  README.md  minesweeper.pro  settings.ini
cpp-prog-minesweeper/include/: mainwindow.h  newgamedialog.h
cpp-prog-minesweeper/moc/: moc_cellbutton.cpp  moc_mainwindow.cpp  moc_predefs.h
cpp-prog-minesweeper/release/minesweeper.app/Contents/MacOS/: minesweeper
cpp-prog-minesweeper/src/: cellbutton.cpp  main.cpp  mainwindow.cpp  minesweeper.cpp  newgamedialog.cpp
cpp-prog-minesweeper/test/: tests.cpp
cpp-prog-ndarray/: CMakeLists.txt
cpp-prog-ndarray/lib/: ndarray.hpp
cpp-prog-ndarray/test/: tests.cpp
cpp-prog-subtitles/: CMakeLists.txt
cpp-prog-subtitles/include/: ass.h  fixed_array.h  sami.h  subrip.h  subtitle.h  vtt.h
cpp-prog-subtitles/src/: ass.cpp  main.cpp  sami.cpp  subrip.cpp  vtt.cpp
cpp-prog-subtitles/test/: tests.cpp
